--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,16 +31,12 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">1</td><td class="numi">1</td><td class="numi_attn">1</td><td class="numi_attn">1</td><td class="numi">65.2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">3</td><td class="numi">43.2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">Test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">TestNGProject.TestNG.TestNGClass</td><td><a href="#m1"><b>failTest</b>  </a></td><td class="numi">1</td><td>1526222255932</td><td class="numi">20</td></tr>
-<tr><th colspan="4">Test &#8212; skipped</th></tr>
-<tr class="skippedodd"><td rowspan="1">TestNGProject.TestNG.TestNGClass</td><td><a href="#m2"><b>skipTest</b>  </a></td><td class="numi">1</td><td>1526222292397</td><td class="numi">2</td></tr>
-<tr><th colspan="4">Test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">TestNGProject.TestNG.TestNGClass</td><td><a href="#m3"><b>loginAndLogoutGmail</b>  </a></td><td class="numi">1</td><td>1526222269807</td><td class="numi">15233</td></tr>
+<tr class="failedodd"><td rowspan="3">TestNGProject.TestNG.TestNGClass</td><td><a href="#m1"><b>failTest</b>  </a></td><td class="numi">3</td><td>1527787306023</td><td class="numi">31619</td></tr><tr class="failedodd"><td><a href="#m2"><b>failTest</b>  </a></td><td class="numi">3</td><td>1527787306023</td><td class="numi">31619</td></tr><tr class="failedodd"><td><a href="#m3"><b>failTest</b>  </a></td><td class="numi">3</td><td>1527787306023</td><td class="numi">31619</td></tr>
 </table>
 <h1>Test</h1>
 <h2 id="m1">TestNGProject.TestNG.TestNGClass:failTest</h2>
@@ -50,17 +46,30 @@ org.testng.Assert.fail(Assert.java:94)
 <br/>at org.testng.Assert.failNotEquals(Assert.java:494)
 <br/>at org.testng.Assert.assertTrue(Assert.java:42)
 <br/>at org.testng.Assert.assertTrue(Assert.java:52)
-<br/>at TestNGProject.TestNG.TestNGClass.failTest(TestNGClass.java:78)
+<br/>at TestNGProject.TestNG.TestNGClass.failTest(TestNGClass.java:77)
 <br/>25 lines not shown
 </div>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">TestNGProject.TestNG.TestNGClass:skipTest</h2>
+<h2 id="m2">TestNGProject.TestNG.TestNGClass:failTest</h2>
 <div style="padding-left:3em">
-<p>Skipping - This is not ready for testing </p>
-TestNGProject.TestNG.TestNGClass.skipTest(TestNGClass.java:85)
+<p>expected [true] but found [false]</p>
+org.testng.Assert.fail(Assert.java:94)
+<br/>at org.testng.Assert.failNotEquals(Assert.java:494)
+<br/>at org.testng.Assert.assertTrue(Assert.java:42)
+<br/>at org.testng.Assert.assertTrue(Assert.java:52)
+<br/>at TestNGProject.TestNG.TestNGClass.failTest(TestNGClass.java:77)
 <br/>25 lines not shown
 </div>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">TestNGProject.TestNG.TestNGClass:loginAndLogoutGmail</h2>
+<h2 id="m3">TestNGProject.TestNG.TestNGClass:failTest</h2>
+<div style="padding-left:3em">
+<p>expected [true] but found [false]</p>
+org.testng.Assert.fail(Assert.java:94)
+<br/>at org.testng.Assert.failNotEquals(Assert.java:494)
+<br/>at org.testng.Assert.assertTrue(Assert.java:42)
+<br/>at org.testng.Assert.assertTrue(Assert.java:52)
+<br/>at TestNGProject.TestNG.TestNGClass.failTest(TestNGClass.java:77)
+<br/>25 lines not shown
+</div>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
